css/pages/home.css
/*GLOBAL*/
body {
  margin: 0px;
  background-color: black !important;
}

body h1, h2, h3, h4, h5, a, p {
  font-family: 'Rubik', sans-serif;
}
.theme-red {
  color: #FB4B4E;
}
/*BANNER*/
.banner-portfolio {
  background-image: url("../../images/background2black-compressor.jpg");
  background-size: cover;
  background-repeat: no-repeat;
  background-attachment: fixed;
  height: 100vh;
  overflow: hidden;
  position: relative;
}
.banner-text {
  position: absolute;
  top: 30%;
}
.banner-text h1 {
  color: white;
  font-weight: bold;
  font-size: 45px;
  text-shadow: 0.5px 0.5px 3px rgba(0,0,0,0.3);
}
.banner-text a {
  text-decoration: none;
}
.banner-text a:hover {
  text-decoration: none;
}

/*ABOUT*/
.about {
  padding: 20px;
  background-color: black;
  color: white;
  text-align: center;
  height: 80vh;
  overflow: hidden;
}
.about-left {
  padding: 0 !important;
}
.about h2 {
  text-align: center;
}
.about img {
 height: 500px;
 object-fit: cover;
 display: block;
 padding: 0;
 margin-left: auto;
 margin-right: auto;
}
.about-contact {
  text-decoration: none;
  color: white;
}
.about-contact:hover {
  text-decoration: none;
  color: white;
}
.about-right {
  background-color: black;
  padding: 30px;
  text-align: left;
  overflow: scroll;
  display: block;
  margin-left: auto;
  margin-right: auto;
  height: 550px;
  text-shadow: 1px 1px 3px rgba(255,255,255,0.3);
}

/*SKILLS*/
.skills {
  background-color: black;
  border: 1px solid #FB4B4E;
}
.skill-wrapper {
  display: flex;
  overflow-x: scroll;
  width: auto;
  white-space: nowrap;
  /*padding: 100px;*/
}
.skill-box img {
  height: 50px;
  object-fit: cover;
  display: block;
  margin-left: auto;
  margin-right: auto;
}
.skill-box {
  padding: 25px;
  margin: 5px;
  color: white;
  background-color: transparent;
  text-align: center;
}
/*PROJECTS*/
.projects {
 text-align: center;
 background-color: black;
 padding: 40px;
 height: 100vh;
 color: white;
}
.projects a {
  text-decoration: none;
}
.projects a:hover {
  text-decoration: none;
}
.sr-only {
  color: black !important;
}
.carousel-inner {
  height: 100%;
}
/*MAP*/
.where {
  background-color: black;
  background-size: cover;
  padding: 80px;
  height: 100vh;
  overflow: hidden;
}
.wheregrid {
  display: grid;
  align-items: center;
  grid-template-columns: repeat(auto-fit, minmax(240px, 1fr));
grid-template-columns: 1fr 1fr;
grid-column-gap: 30px;
}
.where-elements > ul {
  display: grid;
  grid-template-columns: repeat(auto-fit, minmax(320px, 1fr));
  grid-gap: 1rem;
}

#map {
  width: 100%;

}

.spotify {
  width: 100%;
}

.cd-section {
  height: 100vh;
}
.cd-section:first-of-type > div {
  background-color: #2b334f;
}
.cd-section:nth-of-type(2) > div {
  background-color: #2e5367;
}


/*
  ##Device = Most of the Smartphones Mobiles (Portrait)
  ##Screen = B/w 320px to 479px
*/

@media (min-width: 320px) and (max-width: 480px) {
  .banner-portfolio {
  background-image: url("../../images/bg-mobile.png");
  background-size: cover;
  background-repeat: no-repeat;
  background-attachment: fixed;
  height: 100vh;
  overflow: hidden;
  position: relative;
}
  .banner-text h1 {
  color: white;
  font-weight: bold;
  font-size: 30px;
  text-shadow: 0.5px 0.5px 3px rgba(0,0,0,0.3);
}

.about img {
 height: 300px;
 object-fit: cover;
 display: block;
 padding: 0;
 margin-left: auto;
 margin-right: auto;
}
}

